force-app/main/default/objects/PMC_ErrorLog__c/PMC_ErrorLog__c.object-meta.xml
<CustomObject>
    <label>Error Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Error Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>