force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_AdditionalSerializedObject__c.field-meta.xml
<CustomField>
    <fullName>PMC_AdditionalSerializedObject__c</fullName>
    <label>Additional Serialized Object</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>