force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_ClassName__c.field-meta.xml
<CustomField>
    <fullName>PMC_ClassName__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>