force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_Description__c.field-meta.xml
<CustomField>
    <fullName>PMC_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>