force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_DocuSign_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>PMC_DocuSign_Record_Id__c</fullName>
    <description>to capture the DocuSign record id</description>
    <label>PMC_DocuSign_Record_Id</label>
    <length>155</length>
    <type>Text</type>
</CustomField>