force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>PMC_ExternalId__c</fullName>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>