force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_FlowName__c.field-meta.xml
<CustomField>
    <fullName>PMC_FlowName__c</fullName>
    <description>Field to store Flow Name.</description>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>