force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_Message__c.field-meta.xml
<CustomField>
    <fullName>PMC_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>