force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_MethodName__c.field-meta.xml
<CustomField>
    <fullName>PMC_MethodName__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>