force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_SerializedClass__c.field-meta.xml
<CustomField>
    <fullName>PMC_SerializedClass__c</fullName>
    <label>Serialized Class</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>