force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_Source__c.field-meta.xml
<CustomField>
    <fullName>PMC_Source__c</fullName>
    <label>Source</label>
    <type>TextArea</type>
</CustomField>