force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>PMC_StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>