force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>PMC_Submitted_By__c</fullName>
    <description>Docusign record submitted by id</description>
    <label>PMC_Submitted_By</label>
    <length>55</length>
    <type>Text</type>
</CustomField>