force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_Type__c</fullName>
    <description>Field to store Type of Error.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>