force-app/main/default/objects/PMC_ErrorLog__c/fields/PMC_Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>PMC_Workflow_Name__c</fullName>
    <label>Workflow Name</label>
    <type>TextArea</type>
</CustomField>