force-app/main/default/objects/PMC_ErrorLog__c/listViews/Mosaic_Direct_Error_Log_List_View.listView-meta.xml
<ListView>
    <fullName>Mosaic_Direct_Error_Log_List_View</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PMC_StackTrace__c</columns>
    <columns>PMC_Message__c</columns>
    <columns>PMC_ClassName__c</columns>
    <columns>PMC_Source__c</columns>
    <columns>PMC_MethodName__c</columns>
    <columns>PMC_Description__c</columns>
    <columns>PMC_Type__c</columns>
    <columns>PMC_SerializedClass__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mosaic Direct Error Log List View</label>
</ListView>